@@ -17,19 +17,17 @@ package io.gravitee.rest.api.management.v2.rest.mapper;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import fixtures.FlowFixtures;
 import io.gravitee.definition.jackson.datatype.GraviteeMapper;
-import io.gravitee.definition.model.v4.flow.Flow;
+import io.gravitee.definition.model.flow.FlowV2Impl;
+import io.gravitee.definition.model.flow.Step;
+import io.gravitee.definition.model.v4.flow.FlowV4Impl;
 import io.gravitee.definition.model.v4.flow.selector.ChannelSelector;
-import io.gravitee.definition.model.v4.flow.step.Step;
 import io.gravitee.definition.model.v4.nativeapi.NativeFlow;
 import io.gravitee.rest.api.management.v2.rest.model.FlowV2;
-import io.gravitee.rest.api.management.v2.rest.model.FlowV4;
 import io.gravitee.rest.api.management.v2.rest.model.StepV2;
-import io.gravitee.rest.api.management.v2.rest.model.StepV4;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
@@ -64,8 +62,7 @@ public class FlowMapperTest {
         var flow1 = FlowFixtures.aFlowHttpV4();
         var flow2 = FlowFixtures.aFlowHttpV4();
         var flows = flowMapper.mapToHttpV4(List.of(flow1, flow2));
-        assertThat(flows).isNotNull();
-        assertThat(flows.size()).isEqualTo(2);
+        assertThat(flows).hasSize(2);
         assertHttpFlowV4Equals(flows.get(0), flow1);
         assertHttpFlowV4Equals(flows.get(1), flow2);
     }
@@ -95,23 +92,22 @@ public class FlowMapperTest {
         var flow1 = FlowFixtures.aFlowNativeV4();
         var flow2 = FlowFixtures.aFlowNativeV4();
         var flows = flowMapper.mapToNativeV4(List.of(flow1, flow2));
-        assertThat(flows).isNotNull();
-        assertThat(flows.size()).isEqualTo(2);
+        assertThat(flows).hasSize(2);
         assertNativeFlowV4Equals(flows.get(0), flow1);
         assertNativeFlowV4Equals(flows.get(1), flow2);
     }
 
-    private void assertHttpFlowV4Equals(Flow flowEntityV4, FlowV4 flowV4) throws JsonProcessingException {
+    private void assertHttpFlowV4Equals(FlowV4Impl flowEntityV4, io.gravitee.rest.api.management.v2.rest.model.FlowV4 flowV4)
+        throws JsonProcessingException {
         assertEquals(flowEntityV4.getName(), flowV4.getName());
 
         final var flowSelectors = flowEntityV4.getSelectors();
         final var flowV4Selectors = flowV4.getSelectors();
 
-        assertFalse(flowSelectors.isEmpty());
-        assertEquals(flowSelectors.size(), flowV4Selectors.size());
+        assertThat(flowSelectors).hasSameSizeAs(flowV4Selectors);
 
         for (int j = 0; j < flowSelectors.size(); j++) {
-            final ChannelSelector selector = (ChannelSelector) flowSelectors.get(0);
+            final ChannelSelector selector = (ChannelSelector) flowSelectors.getFirst();
             final io.gravitee.rest.api.management.v2.rest.model.ChannelSelector selectorV4 = flowV4Selectors.get(0).getChannelSelector();
 
             assertEquals(selector.getChannel(), selectorV4.getChannel());
@@ -125,8 +121,8 @@ public class FlowMapperTest {
             );
         }
 
-        assertThat(flowV4.getConnect()).isNotNull().isEmpty();
-        assertThat(flowV4.getInteract()).isNotNull().isEmpty();
+        assertThat(flowV4.getConnect()).isEmpty();
+        assertThat(flowV4.getInteract()).isEmpty();
 
         assertStepsV4Equals(flowEntityV4.getRequest(), flowV4.getRequest());
         assertStepsV4Equals(flowEntityV4.getPublish(), flowV4.getPublish());
@@ -134,13 +130,14 @@ public class FlowMapperTest {
         assertStepsV4Equals(flowEntityV4.getSubscribe(), flowV4.getSubscribe());
     }
 
-    private void assertNativeFlowV4Equals(NativeFlow flowEntityV4, FlowV4 flowV4) throws JsonProcessingException {
+    private void assertNativeFlowV4Equals(NativeFlow flowEntityV4, io.gravitee.rest.api.management.v2.rest.model.FlowV4 flowV4)
+        throws JsonProcessingException {
         assertEquals(flowEntityV4.getName(), flowV4.getName());
 
         final var flowV4Selectors = flowV4.getSelectors();
-        assertThat(flowV4Selectors).isNotNull().isEmpty();
-        assertThat(flowV4.getRequest()).isNotNull().isEmpty();
-        assertThat(flowV4.getResponse()).isNotNull().isEmpty();
+        assertThat(flowV4Selectors).isEmpty();
+        assertThat(flowV4.getRequest()).isEmpty();
+        assertThat(flowV4.getResponse()).isEmpty();
 
         assertStepsV4Equals(flowEntityV4.getPublish(), flowV4.getPublish());
         assertStepsV4Equals(flowEntityV4.getSubscribe(), flowV4.getSubscribe());
@@ -148,8 +145,9 @@ public class FlowMapperTest {
         assertStepsV4Equals(flowEntityV4.getInteract(), flowV4.getInteract());
     }
 
-    private void assertStepsV4Equals(List<Step> steps, List<StepV4> stepsV4) throws JsonProcessingException {
-        assertEquals(steps.size(), steps.size());
+    private void assertStepsV4Equals(List<Step> steps, List<io.gravitee.rest.api.management.v2.rest.model.StepV4> stepsV4)
+        throws JsonProcessingException {
+        assertThat(steps).hasSameSizeAs(stepsV4);
 
         for (int i = 0; i < steps.size(); i++) {
             final var step = steps.get(i);
@@ -179,7 +177,7 @@ public class FlowMapperTest {
         assertFlowV2Equals(flowEntityV2, flowV2);
     }
 
-    private void assertFlowV2Equals(io.gravitee.definition.model.flow.Flow flowEntityV2, FlowV2 flowV2) throws JsonProcessingException {
+    private void assertFlowV2Equals(FlowV2Impl flowEntityV2, FlowV2 flowV2) throws JsonProcessingException {
         assertEquals(flowEntityV2.getName(), flowV2.getName());
         assertEquals(flowEntityV2.getPath(), flowV2.getPathOperator().getPath());
         assertEquals(flowEntityV2.getOperator().name(), flowV2.getPathOperator().getOperator().name());
@@ -188,8 +186,7 @@ public class FlowMapperTest {
         assertStepsV2Equals(flowEntityV2.getPost(), flowV2.getPost());
     }
 
-    private void assertStepsV2Equals(List<io.gravitee.definition.model.flow.Step> steps, List<StepV2> stepsV2)
-        throws JsonProcessingException {
+    private void assertStepsV2Equals(List<Step> steps, List<StepV2> stepsV2) throws JsonProcessingException {
         assertEquals(steps.size(), stepsV2.size());
 
         for (int i = 0; i < steps.size(); i++) {
